--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-test</artifactId>
             <version>2.5.3</version>
-            <scope>test</scope>
             <type>jar</type>
         </dependency>
         
@@ -63,8 +62,18 @@
     <artifactId>AbsoluteLayout</artifactId>
     <version>RELEASE124</version>
 </dependency>
-
-
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.3.9</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
