--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <version>5.3.9</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.19</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
