--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
             <artifactId>jasperreports</artifactId>
             <version>4.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.17</version>
+        </dependency>
     </dependencies>
 
     <build>
